--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <!-- Vue imports -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vuex@3.0.0"></script>
@@ -21,7 +22,9 @@
     <!-- Bootstrap CDN and CSS file -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" /> -->
+    
+    <!-- Custom CSS file -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/login.css') }}">
 
 </head>
 
@@ -30,6 +33,7 @@
 
     <!-- JS file and bootstrap related scripts -->
     <script src="{{url_for('static', filename='app.js')}}" type="module"></script>
+    <script src="{{url_for('static', filename='assets/icons/login-icon.js')}}"></script>
 </body>
 
 </html>
