--- a/static/styling/users/register.css
+++ b/static/styling/users/register.css
@@ -5,7 +5,7 @@ body{
     font-family: Arial, sans-serif;
 }
 
-.login-parent-container {
+.register-parent-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,22 +14,22 @@ body{
     margin-top: -50px;
 }
 
-.login-container {
+.register-container {
     background: white;
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
     text-align: center;
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
 }
-.login-h2 {
+.register-h2 {
     margin-bottom: 30px;
     font-size: 35px;
     font-weight: bold;
     color: #000000;
 }
-.login-input {
+.register-input {
     width: 100%;
     padding: 12px;
     margin: 10px 0;
@@ -38,11 +38,11 @@ body{
     background: #f0f0f0;
     font-size: 16px;
 }
-.login-input:focus {
+.register-input:focus {
     outline: none;
     background: #e0e0e0;
 }
-.login-button {
+.register-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,6 +57,6 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.login-button:hover {
+.register-button:hover {
     background: #0056b3;
 }
