Quiz API implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/login.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/register.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/alert/alert.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_dashboard.css') }}">
 
 </head>
 
