--- a/static/styling/admin/admin_dashboard.css
+++ b/static/styling/admin/admin_dashboard.css
@@ -23,3 +23,15 @@
     margin-top: 20px;
     width: 100%;
 }
+
+.admin-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    border: solid;
+    border-color: black;
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 30px;
+}
