--- a/static/styling/admin/admin_quiz.css
+++ b/static/styling/admin/admin_quiz.css
@@ -1,4 +1,4 @@
-.admin-dashboard-parent-container {
+.admin-quiz-parent-container {
     display: flex;
     justify-content: center;
     height: 100%;
@@ -6,7 +6,7 @@
     padding-top: 40px;
 }
 
-.admin-dashboard-container {
+.admin-quiz-container {
     background: white;
     padding: 40px;
     border-radius: 12px;
@@ -24,7 +24,7 @@
     width: 100%;
 }
 
-.admin-dashboard-header {
+.admin-quiz-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
