--- a/templates/index.html
+++ b/templates/index.html
@@ -28,12 +28,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/register.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/alert/alert.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_dashboard.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_quiz.css') }}">
 
 </head>
 
 <body>
     <div id="app"></div>
-    <flash-messages ref="flash"></flash-messages>
 
     <!-- JS file and bootstrap related scripts -->
     <script src="{{url_for('static', filename='app.js')}}" type="module"></script>
