Milestone-3 : Built Admin dashboard using VueJS with CRUD operations for subjects, chapters, quizzes, and questions using API.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <!-- Vue imports -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router@3/dist/vue-router.js"></script>
+    <script src="https://unpkg.com/vue-router@3.5.4/dist/vue-router.min.js"></script>
     <script src="https://unpkg.com/vuex@3.0.0"></script>
 
     <!-- Bootstrap stylesheet -->
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/alert/alert.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_dashboard.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_quiz.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_users.css') }}">
 
 </head>
 
