--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
     <!-- Custom CSS file -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/login.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/register.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/user_dashboard.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/alert/alert.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_dashboard.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_quiz.css') }}">
