--- a/static/styling/users/user_dashboard.css
+++ b/static/styling/users/user_dashboard.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .card:hover {
-    transform: translateY(-5px);
+    transform: translateY(-2px);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 .main-container{
@@ -27,13 +27,13 @@
     color: #555;
     margin-bottom: 8px;
 }
-.btn-primary {
+.card-button {
     width: 100%;
     font-weight: bold;
     border-radius: 8px;
     padding: 10px;
     transition: background 0.3s;
 }
-.btn-primary:hover {
+.card-button:hover {
     background: #2d3af9;
 }
