Attempted quiz details displayed in scores tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/login.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/register.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/user_dashboard.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/users/user_scores.css') }}">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/alert/alert.css') }}">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_dashboard.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_quiz.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_users.css') }}">
