Milestone-4 : Developed User Dashboard with quiz attempt functionality and timer

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_quiz.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styling/admin/admin_users.css') }}">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling/chart_container.css') }}">
+
 </head>
 
 <body>
