--- a/static/styling/users/user_scores.css
+++ b/static/styling/users/user_scores.css
@@ -16,3 +16,18 @@
     max-width: 1350px;
     margin-top: 0;
 }
+
+.corr-ans {
+    background-color: rgb(54, 186, 54);
+    color: rgb(151, 151, 151)
+}
+
+.wrong-ans {
+    background-color: rgb(234, 77, 77);
+}
+
+.custom-radio input[type="radio"]:checked {
+  outline: 2px solid #007bff; /* Blue outline */
+  outline-offset: 2px; /* Adds spacing between outline and input */
+  border-radius: 50%;
+}
