--- a/static/styling/alert/alert.css
+++ b/static/styling/alert/alert.css
@@ -1,7 +1,8 @@
 #alert {
   position: fixed;
-  bottom: 10px;
+  top: 10px;
   right: 10px;
+  margin-top: 80px;
   z-index: 1050;
   min-width: fit-content;
   max-width: 90vw;
