--- a/static/styling/admin/admin_dashboard.css
+++ b/static/styling/admin/admin_dashboard.css
@@ -36,6 +36,7 @@
 }
 
 .subject-names {
+    background-color: rgb(182, 251, 165, 0.2);
     display: flex;
     align-items: center;
     border-radius: 5px;
