--- a/static/styling/admin/admin_quiz.css
+++ b/static/styling/admin/admin_quiz.css
@@ -29,9 +29,8 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    border: solid;
-    border-color: black;
-    border-radius: 10px;
+    border-bottom: solid;
+    border-color: hsl(0, 0%, 0%, 0.2);
     padding: 10px 10px 10px 10px;
     margin-bottom: 30px;
 }
